--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VITRIEN — Home</title>
-  <!-- Fonts: serif + sans + code-looking accent -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -21,10 +21,9 @@
     }
     *,*::before,*::after{box-sizing:border-box}
     body{margin:0; font-family:var(--ff-sans); color:var(--fg); background:#fff;}
-    img{display:block; max-width:100%}
     a{text-decoration:none; color:inherit}
     h1,h2{font-family:var(--ff-serif); font-weight:400;}
-    h1{font-size:clamp(40px,6vw,72px);}
+    h1{font-size:clamp(40px,6vw,72px); margin:0 0 20px;}
     h2{font-size:clamp(26px,3.6vw,42px); margin:0 0 12px}
 
     /* Header */
@@ -39,12 +38,12 @@
     .container{max-width:var(--max); margin:0 auto}
     .meta{font-family:var(--ff-mono); font-size:12px; color:var(--muted); margin-bottom:12px; text-transform:uppercase;}
 
-    .modules{display:grid; gap:40px}
+    .grid{display:grid; gap:40px}
     .two-col{grid-template-columns:1fr;}
     @media(min-width:900px){.two-col{grid-template-columns:1fr 1fr;}}
 
-    .module img{width:100%; height:auto; border:1px solid var(--line)}
-    .caption{font-size:14px; line-height:1.5; margin-top:10px; color:var(--fg)}
+    .tile img{width:100%; height:auto; border:1px solid var(--line)}
+    .caption{font-size:14px; line-height:1.5; margin-top:10px;}
     .caption strong{font-family:var(--ff-serif); font-size:18px; display:block; margin-bottom:4px;}
     .mono-link{font-family:var(--ff-mono); font-size:12px; text-transform:uppercase;}
 
@@ -72,11 +71,11 @@
 </head>
 <body>
   <header>
-    <nav class="nav" aria-label="Hoofdnavigatie">
+    <nav class="nav">
       <a href="#top" class="brand">VITRIEN</a>
-      <div class="menu" role="menubar">
+      <div class="menu">
         <a href="#over" data-lang-nl="Over" data-lang-en="About">Over</a>
-        <a href="#praktisch" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
+        <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
         <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
         <a href="#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
         <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
@@ -92,7 +91,7 @@
     </nav>
     <div class="drawer" id="drawer" aria-hidden="true">
       <a href="#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
-      <a href="#praktisch" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
+      <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
       <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
       <a href="#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
       <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
@@ -104,7 +103,7 @@
     <section class="hero">
       <div class="container">
         <h1 data-lang-nl="Winkelramen als tijdelijke tentoonstellingen." data-lang-en="Shop windows as temporary exhibitions.">Winkelramen als tijdelijke tentoonstellingen.</h1>
-        <p class="lead" data-lang-nl="Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie." data-lang-en="A quiet route through Leuven. Existing works. Public space as gallery.">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
+        <p data-lang-nl="Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie." data-lang-en="A quiet route through Leuven. Existing works. Public space as gallery.">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
       </div>
     </section>
 
@@ -116,8 +115,59 @@
       </div>
     </section>
 
-    <!-- De rest van de secties idem: voeg data-lang-nl en data-lang-en attributes toe aan teksten -->
+    <section id="locaties">
+      <div class="container">
+        <div class="meta" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</div>
+        <h2 data-lang-nl="Locaties" data-lang-en="Venues">Locaties</h2>
+        <div class="grid two-col">
+          <div class="tile"><div class="caption"><strong>Wear Store</strong><span>Leuven, België</span></div></div>
+          <div class="tile"><div class="caption"><strong>30CC Schouwburg</strong><span>Bondgenotenlaan, Leuven</span></div></div>
+          <div class="tile"><div class="caption"><strong>Folie Leuven</strong><span>Brusselsestraat, Leuven</span></div></div>
+          <div class="tile"><div class="caption"><strong>De Slegte Leuven</strong><span>Diestsestraat, Leuven</span></div></div>
+          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+        </div>
+      </div>
+    </section>
 
+    <section id="kunstenaars">
+      <div class="container">
+        <div class="meta" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</div>
+        <h2 data-lang-nl="Deelnemende kunstenaars" data-lang-en="Participating artists">Deelnemende kunstenaars</h2>
+        <div class="grid two-col">
+          <div class="tile"><img src="placeholder1.jpg" alt="Kunstenaar 1"><div class="caption"><strong>Naam Kunstenaar</strong><span>Korte bio...</span><br><a href="#" class="mono-link" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a></div></div>
+          <div class="tile"><img src="placeholder2.jpg" alt="Kunstenaar 2"><div class="caption"><strong>Naam Kunstenaar</strong><span>Korte bio...</span><br><a href="#" class="mono-link" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a></div></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="opencall">
+      <div class="container">
+        <div class="meta" data-lang-nl="Open call" data-lang-en="Open call">Open call</div>
+        <h2 data-lang-nl="Doe mee" data-lang-en="Participate">Doe mee</h2>
+        <p data-lang-nl="Vitrien lanceert een open call voor kunstenaars die hun werk in een van de locaties willen tonen." data-lang-en="Vitrien launches an open call for artists who want to show their work in one of the venues.">Vitrien lanceert een open call...</p>
+      </div>
+    </section>
+
+    <section id="lov">
+      <div class="container">
+        <div class="meta">LOV2030</div>
+        <h2>LOV2030</h2>
+        <p data-lang-nl="Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030." data-lang-en="Vitrien is part of Leuven's candidacy for European Capital of Culture 2030.">Vitrien maakt deel uit...</p>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <div class="meta" data-lang-nl="Contact" data-lang-en="Contact">Contact</div>
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:hallo@vitrien.be">hallo@vitrien.be</a></p>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -134,7 +184,6 @@
       const open=d.classList.toggle('open');
       d.setAttribute('aria-hidden', open ? 'false' : 'true');
     }
-
     function setLang(lang){
       document.querySelectorAll('[data-lang-nl]').forEach(el=>{
         el.textContent = el.getAttribute(`data-lang-${lang}`);
