--- a/index.html
+++ b/index.html
@@ -2,78 +2,29 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>VITRIEN — Home</title>
-  <!-- Fonts -->
+
+  <!-- ===============================
+       FONTS
+  ================================ -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --fg: #111;
-      --muted: #6f6f6f;
-      --line: #e9e9e9;
-      --max: 1200px;
-      --ff-sans: Inter, system-ui, sans-serif;
-      --ff-serif: 'EB Garamond', serif;
-      --ff-mono: 'IBM Plex Mono', monospace;
-    }
-    *,*::before,*::after{box-sizing:border-box}
-    body{margin:0; font-family:var(--ff-sans); color:var(--fg); background:#fff;}
-    a{text-decoration:none; color:inherit}
-    h1,h2{font-family:var(--ff-serif); font-weight:400;}
-    h1{font-size:clamp(40px,6vw,72px); margin:0 0 20px;}
-    h2{font-size:clamp(26px,3.6vw,42px); margin:0 0 12px}
-
-    /* Header */
-    header{position:sticky; top:0; background:rgba(255,255,255,0.95); backdrop-filter:saturate(160%) blur(8px); border-bottom:1px solid var(--line); z-index:50;}
-    .nav{max-width:var(--max); margin:0 auto; padding:16px 24px; display:flex; justify-content:space-between; align-items:center}
-    .brand{font-family:var(--ff-serif); font-size:24px; letter-spacing:.04em}
-    .menu{display:flex; gap:22px; align-items:center}
-    .menu a{font-size:13px; text-transform:uppercase; letter-spacing:.14em; opacity:.9}
-    .menu a:hover{text-decoration:underline; text-underline-offset:4px;}
-
-    section{padding:80px 20px}
-    .container{max-width:var(--max); margin:0 auto}
-    .meta{font-family:var(--ff-mono); font-size:12px; color:var(--muted); margin-bottom:12px; text-transform:uppercase;}
-
-    .grid{display:grid; gap:40px}
-    .two-col{grid-template-columns:1fr;}
-    @media(min-width:900px){.two-col{grid-template-columns:1fr 1fr;}}
-
-    .tile img{width:100%; height:auto; border:1px solid var(--line)}
-    .caption{font-size:14px; line-height:1.5; margin-top:10px;}
-    .caption strong{font-family:var(--ff-serif); font-size:18px; display:block; margin-bottom:4px;}
-    .mono-link{font-family:var(--ff-mono); font-size:12px; text-transform:uppercase;}
-
-    footer{border-top:1px solid var(--line); margin-top:40px}
-    .footer-inner{max-width:var(--max); margin:0 auto; padding:22px 20px; display:flex; justify-content:space-between; font-size:12px; color:#777}
-
-    /* Burger nav + drawer */
-    .burger{display:none;border:1px solid var(--line);background:transparent;padding:8px 10px}
-    .burger span{display:block;width:22px;height:1.5px;background:var(--fg);margin:4px 0}
-    @media (max-width:860px){
-      .menu{display:none}
-      .burger{display:block}
-      .drawer{position:fixed;inset:64px 16px auto 16px;background:#fff;border:1px solid var(--line);padding:8px}
-      .drawer a{display:block;padding:14px 10px;border-bottom:1px solid var(--line);text-transform:uppercase;font-size:13px;letter-spacing:.11em}
-      .drawer a:last-child{border-bottom:none}
-      .drawer{display:none}
-      .drawer.open{display:block}
-    }
-
-    /* Language switcher */
-    .lang-switch{margin-left:20px; font-size:12px; font-family:var(--ff-mono)}
-    .lang-switch button{background:none; border:none; cursor:pointer; padding:4px 6px; text-transform:uppercase;}
-    .lang-switch button.active{text-decoration:underline;}
-  </style>
+  <!-- ===============================
+       STYLESHEET (extern)
+  ================================ -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
+  <!-- ===============================
+       HEADER: merk, primaire navigatie, taalswitch
+  ================================ -->
   <header>
-    <nav class="nav">
+    <nav class="nav" aria-label="Hoofdnavigatie">
       <a href="#top" class="brand">VITRIEN</a>
-      <div class="menu">
+      <div class="menu" role="menubar">
         <a href="#over" data-lang-nl="Over" data-lang-en="About">Over</a>
         <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
         <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
@@ -81,7 +32,7 @@
         <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
         <a href="#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
       </div>
-      <div class="lang-switch">
+      <div class="lang-switch" aria-label="Taalwissel">
         <button onclick="setLang('nl')" id="lang-nl" class="active">NL</button>|
         <button onclick="setLang('en')" id="lang-en">EN</button>
       </div>
@@ -99,14 +50,20 @@
     </div>
   </header>
 
+  <!-- ===============================
+       HERO: claim + korte intro
+  ================================ -->
   <main id="top">
     <section class="hero">
       <div class="container">
         <h1 data-lang-nl="Winkelramen als tijdelijke tentoonstellingen." data-lang-en="Shop windows as temporary exhibitions.">Winkelramen als tijdelijke tentoonstellingen.</h1>
-        <p data-lang-nl="Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie." data-lang-en="A quiet route through Leuven. Existing works. Public space as gallery.">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
+        <p class="lead" data-lang-nl="Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie." data-lang-en="A quiet route through Leuven. Existing works. Public space as gallery.">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
       </div>
     </section>
 
+    <!-- ===============================
+         OVER: missie/omschrijving
+    ================================= -->
     <section id="over">
       <div class="container">
         <div class="meta" data-lang-nl="Over" data-lang-en="About">Over</div>
@@ -115,61 +72,153 @@
       </div>
     </section>
 
+    <!-- ===============================
+         LOCATIES: 10 plekken, naam + adres
+    ================================= -->
     <section id="locaties">
       <div class="container">
         <div class="meta" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</div>
         <h2 data-lang-nl="Locaties" data-lang-en="Venues">Locaties</h2>
         <div class="grid two-col">
-          <div class="tile"><div class="caption"><strong>Wear Store</strong><span>Leuven, België</span></div></div>
-          <div class="tile"><div class="caption"><strong>30CC Schouwburg</strong><span>Bondgenotenlaan, Leuven</span></div></div>
-          <div class="tile"><div class="caption"><strong>Folie Leuven</strong><span>Brusselsestraat, Leuven</span></div></div>
-          <div class="tile"><div class="caption"><strong>De Slegte Leuven</strong><span>Diestsestraat, Leuven</span></div></div>
-          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
-          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
-          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
-          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
-          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
-          <div class="tile"><div class="caption"><strong>Locatie volgt</strong><span>Adres volgt</span></div></div>
+          <!-- 1 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://wear-store.be/pages/our-stores" target="_blank" rel="noopener">Wear Store</a></strong>
+              <span data-lang-nl="Leuven, België" data-lang-en="Leuven, Belgium">Leuven, België</span>
+            </div>
+          </article>
+          <!-- 2 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://www.30cc.be/nl" target="_blank" rel="noopener">30CC Schouwburg</a></strong>
+              <span>Bondgenotenlaan 21, 3000 Leuven</span>
+            </div>
+          </article>
+          <!-- 3 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://www.instagram.com/foliefashionleuven/" target="_blank" rel="noopener">Folie Leuven</a></strong>
+              <span>Tiensestraat 39, 3000 Leuven</span>
+            </div>
+          </article>
+          <!-- 4 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://www.deslegte.com/leuven/" target="_blank" rel="noopener">De Slegte Leuven</a></strong>
+              <span>Diestsestraat 72, 3000 Leuven</span>
+            </div>
+          </article>
+          <!-- 5 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://www.huisdelsart.be/" target="_blank" rel="noopener">Huis Delsart</a></strong>
+              <span>Bondgenotenlaan 81, 3000 Leuven</span>
+            </div>
+          </article>
+          <!-- 6 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://antverpia.be/pharmacies/antverpia-leuven/" target="_blank" rel="noopener">Apotheek De Bond</a></strong>
+              <span>Bondgenotenlaan 131, 3000 Leuven</span>
+            </div>
+          </article>
+          <!-- 7 -->
+          <article class="tile">
+            <div class="caption">
+              <strong><a href="https://www.instagram.com/vipconceptleuven/?hl=en" target="_blank" rel="noopener">Vip Concept</a></strong>
+              <span data-lang-nl="Leuven, België" data-lang-en="Leuven, Belgium">Leuven, België</span>
+            </div>
+          </article>
+          <!-- 8–10 placeholders -->
+          <article class="tile">
+            <div class="caption">
+              <strong data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</strong>
+              <span data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</span>
+            </div>
+          </article>
+          <article class="tile">
+            <div class="caption">
+              <strong data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</strong>
+              <span data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</span>
+            </div>
+          </article>
+          <article class="tile">
+            <div class="caption">
+              <strong data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</strong>
+              <span data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</span>
+            </div>
+          </article>
         </div>
       </div>
     </section>
 
+    <!-- ===============================
+         KUNSTENAARS: tegels met beeld + korte bio
+    ================================= -->
     <section id="kunstenaars">
       <div class="container">
         <div class="meta" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</div>
         <h2 data-lang-nl="Deelnemende kunstenaars" data-lang-en="Participating artists">Deelnemende kunstenaars</h2>
         <div class="grid two-col">
-          <div class="tile"><img src="placeholder1.jpg" alt="Kunstenaar 1"><div class="caption"><strong>Naam Kunstenaar</strong><span>Korte bio...</span><br><a href="#" class="mono-link" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a></div></div>
-          <div class="tile"><img src="placeholder2.jpg" alt="Kunstenaar 2"><div class="caption"><strong>Naam Kunstenaar</strong><span>Korte bio...</span><br><a href="#" class="mono-link" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a></div></div>
+          <article class="tile">
+            <img src="placeholder-jason.jpg" alt="Werk van Jason Slabbynck">
+            <div class="caption">
+              <strong>Jason Slabbynck</strong>
+              <span data-lang-nl="Site-specifieke paviljoens en constructies; dialoog tussen vorm en materie." data-lang-en="Site-specific pavilions and constructions; tension between form and matter.">Site-specifieke paviljoens en constructies; dialoog tussen vorm en materie.</span>
+              <br><a class="mono-link" href="jason-slabbynck.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
+            </div>
+          </article>
+          <article class="tile">
+            <img src="placeholder-shailey.jpg" alt="Werk van Shailey Shah">
+            <div class="caption">
+              <strong>Shailey Shah</strong>
+              <span data-lang-nl="Video, sculptuur en installaties rond identiteit en materialiteit." data-lang-en="Video, sculpture and installations exploring identity and materiality.">Video, sculptuur en installaties rond identiteit en materialiteit.</span>
+              <br><a class="mono-link" href="shailey-shah.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
+            </div>
+          </article>
+          <!-- Voeg de overige kunstenaars hier in hetzelfde patroon toe -->
         </div>
       </div>
     </section>
 
+    <!-- ===============================
+         OPEN CALL: korte oproep + CTA
+    ================================= -->
     <section id="opencall">
       <div class="container">
         <div class="meta" data-lang-nl="Open call" data-lang-en="Open call">Open call</div>
         <h2 data-lang-nl="Doe mee" data-lang-en="Participate">Doe mee</h2>
-        <p data-lang-nl="Vitrien lanceert een open call voor kunstenaars die hun werk in een van de locaties willen tonen." data-lang-en="Vitrien launches an open call for artists who want to show their work in one of the venues.">Vitrien lanceert een open call...</p>
+        <p data-lang-nl="We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio." data-lang-en="We seek existing works that fit a shop-window context. Send 3–5 images and a short bio.">We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio.</p>
+        <p style="margin-top:10px"><a class="mono-link" href="#" data-lang-nl="Dien in" data-lang-en="Submit">Dien in</a></p>
       </div>
     </section>
 
+    <!-- ===============================
+         LOV2030: context
+    ================================= -->
     <section id="lov">
       <div class="container">
         <div class="meta">LOV2030</div>
         <h2>LOV2030</h2>
-        <p data-lang-nl="Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030." data-lang-en="Vitrien is part of Leuven's candidacy for European Capital of Culture 2030.">Vitrien maakt deel uit...</p>
+        <p data-lang-nl="Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030." data-lang-en="Vitrien is part of Leuven's candidacy for European Capital of Culture 2030.">Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030.</p>
       </div>
     </section>
 
+    <!-- ===============================
+         CONTACT
+    ================================= -->
     <section id="contact">
       <div class="container">
         <div class="meta" data-lang-nl="Contact" data-lang-en="Contact">Contact</div>
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:hallo@vitrien.be">hallo@vitrien.be</a></p>
+        <p>Email: <a class="mono-link" href="mailto:hallo@vitrien.be">hallo@vitrien.be</a></p>
       </div>
     </section>
   </main>
 
+  <!-- ===============================
+       FOOTER
+  ================================ -->
   <footer>
     <div class="footer-inner">
       <div>© <span id="year"></span> Vitrien — Leuven</div>
@@ -177,20 +226,9 @@
     </div>
   </footer>
 
-  <script>document.getElementById('year').textContent=new Date().getFullYear()</script>
-  <script>
-    function toggleDrawer(){
-      const d=document.getElementById('drawer');
-      const open=d.classList.toggle('open');
-      d.setAttribute('aria-hidden', open ? 'false' : 'true');
-    }
-    function setLang(lang){
-      document.querySelectorAll('[data-lang-nl]').forEach(el=>{
-        el.textContent = el.getAttribute(`data-lang-${lang}`);
-      });
-      document.getElementById('lang-nl').classList.toggle('active', lang==='nl');
-      document.getElementById('lang-en').classList.toggle('active', lang==='en');
-    }
-  </script>
+  <!-- ===============================
+       SCRIPTS (extern)
+  ================================ -->
+  <script src="/assets/js/app.js" defer></script>
 </body>
 </html>
