--- a/index.html
+++ b/index.html
@@ -229,6 +229,6 @@
   <!-- ===============================
        SCRIPTS (extern)
   ================================ -->
-  <script src="/assets/js/app.js" defer></script>
-</body>
-</html>
+<link rel="stylesheet" href="assets/css/styles.css">
+<script src="assets/js/app.js" defer></script>
+
