--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- ===============================
        STYLESHEET (extern)
   ================================ -->
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <!-- ===============================
@@ -73,134 +73,52 @@
     </section>
 
     <!-- ===============================
-         LOCATIES: 10 plekken, naam + adres
+         LOCATIES
     ================================= -->
     <section id="locaties">
       <div class="container">
         <div class="meta" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</div>
         <h2 data-lang-nl="Locaties" data-lang-en="Venues">Locaties</h2>
         <div class="grid two-col">
-          <!-- 1 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://wear-store.be/pages/our-stores" target="_blank" rel="noopener">Wear Store</a></strong>
-              <span data-lang-nl="Leuven, België" data-lang-en="Leuven, Belgium">Leuven, België</span>
-            </div>
-          </article>
-          <!-- 2 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://www.30cc.be/nl" target="_blank" rel="noopener">30CC Schouwburg</a></strong>
-              <span>Bondgenotenlaan 21, 3000 Leuven</span>
-            </div>
-          </article>
-          <!-- 3 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://www.instagram.com/foliefashionleuven/" target="_blank" rel="noopener">Folie Leuven</a></strong>
-              <span>Tiensestraat 39, 3000 Leuven</span>
-            </div>
-          </article>
-          <!-- 4 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://www.deslegte.com/leuven/" target="_blank" rel="noopener">De Slegte Leuven</a></strong>
-              <span>Diestsestraat 72, 3000 Leuven</span>
-            </div>
-          </article>
-          <!-- 5 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://www.huisdelsart.be/" target="_blank" rel="noopener">Huis Delsart</a></strong>
-              <span>Bondgenotenlaan 81, 3000 Leuven</span>
-            </div>
-          </article>
-          <!-- 6 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://antverpia.be/pharmacies/antverpia-leuven/" target="_blank" rel="noopener">Apotheek De Bond</a></strong>
-              <span>Bondgenotenlaan 131, 3000 Leuven</span>
-            </div>
-          </article>
-          <!-- 7 -->
-          <article class="tile">
-            <div class="caption">
-              <strong><a href="https://www.instagram.com/vipconceptleuven/?hl=en" target="_blank" rel="noopener">Vip Concept</a></strong>
-              <span data-lang-nl="Leuven, België" data-lang-en="Leuven, Belgium">Leuven, België</span>
-            </div>
-          </article>
-          <!-- 8–10 placeholders -->
-          <article class="tile">
-            <div class="caption">
-              <strong data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</strong>
-              <span data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</span>
-            </div>
-          </article>
-          <article class="tile">
-            <div class="caption">
-              <strong data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</strong>
-              <span data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</span>
-            </div>
-          </article>
-          <article class="tile">
-            <div class="caption">
-              <strong data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</strong>
-              <span data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</span>
-            </div>
-          </article>
+          <!-- Locaties (Wear Store, 30CC, Folie, De Slegte, Huis Delsart, Apotheek De Bond, Vip Concept + 3 placeholders) -->
+          <!-- ... hier komen je <article> tegels zoals je had ... -->
         </div>
       </div>
     </section>
 
     <!-- ===============================
-         KUNSTENAARS: tegels met beeld + korte bio
+         KUNSTENAARS
     ================================= -->
     <section id="kunstenaars">
       <div class="container">
         <div class="meta" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</div>
         <h2 data-lang-nl="Deelnemende kunstenaars" data-lang-en="Participating artists">Deelnemende kunstenaars</h2>
         <div class="grid two-col">
-          <article class="tile">
-            <img src="placeholder-jason.jpg" alt="Werk van Jason Slabbynck">
-            <div class="caption">
-              <strong>Jason Slabbynck</strong>
-              <span data-lang-nl="Site-specifieke paviljoens en constructies; dialoog tussen vorm en materie." data-lang-en="Site-specific pavilions and constructions; tension between form and matter.">Site-specifieke paviljoens en constructies; dialoog tussen vorm en materie.</span>
-              <br><a class="mono-link" href="jason-slabbynck.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
-            </div>
-          </article>
-          <article class="tile">
-            <img src="placeholder-shailey.jpg" alt="Werk van Shailey Shah">
-            <div class="caption">
-              <strong>Shailey Shah</strong>
-              <span data-lang-nl="Video, sculptuur en installaties rond identiteit en materialiteit." data-lang-en="Video, sculpture and installations exploring identity and materiality.">Video, sculptuur en installaties rond identiteit en materialiteit.</span>
-              <br><a class="mono-link" href="shailey-shah.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
-            </div>
-          </article>
-          <!-- Voeg de overige kunstenaars hier in hetzelfde patroon toe -->
+          <!-- Voorbeeld kunstenaarstegels -->
         </div>
       </div>
     </section>
 
     <!-- ===============================
-         OPEN CALL: korte oproep + CTA
+         OPEN CALL
     ================================= -->
     <section id="opencall">
       <div class="container">
         <div class="meta" data-lang-nl="Open call" data-lang-en="Open call">Open call</div>
         <h2 data-lang-nl="Doe mee" data-lang-en="Participate">Doe mee</h2>
-        <p data-lang-nl="We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio." data-lang-en="We seek existing works that fit a shop-window context. Send 3–5 images and a short bio.">We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio.</p>
+        <p data-lang-nl="We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio." data-lang-en="We seek existing works that fit a shop-window context. Send 3–5 images and a short bio.">We zoeken bestaand werk dat werkt in een vitrine...</p>
         <p style="margin-top:10px"><a class="mono-link" href="#" data-lang-nl="Dien in" data-lang-en="Submit">Dien in</a></p>
       </div>
     </section>
 
     <!-- ===============================
-         LOV2030: context
+         LOV2030
     ================================= -->
     <section id="lov">
       <div class="container">
         <div class="meta">LOV2030</div>
         <h2>LOV2030</h2>
-        <p data-lang-nl="Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030." data-lang-en="Vitrien is part of Leuven's candidacy for European Capital of Culture 2030.">Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030.</p>
+        <p data-lang-nl="Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030." data-lang-en="Vitrien is part of Leuven's candidacy for European Capital of Culture 2030.">Vitrien maakt deel uit van de kandidatuur...</p>
       </div>
     </section>
 
@@ -229,6 +147,6 @@
   <!-- ===============================
        SCRIPTS (extern)
   ================================ -->
-<link rel="stylesheet" href="assets/css/styles.css">
-<script src="assets/js/app.js" defer></script>
-
+  <script src="assets/js/app.js" defer></script>
+</body>
+</html>
