--- a/index.html
+++ b/index.html
@@ -89,15 +89,105 @@
     <!-- ===============================
          KUNSTENAARS
     ================================= -->
-    <section id="kunstenaars">
-      <div class="container">
-        <div class="meta" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</div>
-        <h2 data-lang-nl="Deelnemende kunstenaars" data-lang-en="Participating artists">Deelnemende kunstenaars</h2>
-        <div class="grid two-col">
-          <!-- Voorbeeld kunstenaarstegels -->
-        </div>
-      </div>
-    </section>
+   <section id="kunstenaars">
+  <div class="container">
+    <div class="meta" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</div>
+    <h2 data-lang-nl="Deelnemende kunstenaars" data-lang-en="Participating artists">Deelnemende kunstenaars</h2>
+
+    <div class="modules artists-grid">
+      <figure class="module">
+        <img src="assets/img/artists/Jason.jpg" alt="Werk van Jason Slabbynck">
+        <figcaption class="caption">
+          <strong>Jason Slabbynck</strong><br>
+          Architect-kunstenaar van site-specifieke constructies met herkenbare materialen. Paviljoens die spanningsvelden tussen vorm en materie oproepen en uitnodigen tot dialoog.
+          <a class="mono-link" href="jason-slabbynck.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Shailey.jpg" alt="Werk van Shailey Shah">
+        <figcaption class="caption">
+          <strong>Shailey Shah</strong><br>
+          Multidisciplinair: video, sculptuur, schilderkunst, installaties. Onderzoekt identiteit, gender en haar multiculturele achtergrond via materiaal en vorm.
+          <a class="mono-link" href="shailey-shah.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Alice.jpg" alt="Werk van Alice Leens">
+        <figcaption class="caption">
+          <strong>Alice Leens</strong><br>
+          Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen.
+          <a class="mono-link" href="alice-leens.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Camille.jpg" alt="Werk van Camille Lemille">
+        <figcaption class="caption">
+          <strong>Camille Lemille</strong><br>
+          Performance, drukwerk en AV. Taal en dagelijkse documenten als bron voor politieke en poëtische interventies.
+          <a class="mono-link" href="camille-lemille.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Carole.jpg" alt="Werk van Carole Louis">
+        <figcaption class="caption">
+          <strong>Carole Louis</strong><br>
+          Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek.
+          <a class="mono-link" href="carole-louis.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Jonathan.jpg" alt="Werk van Jonathan Van de Wal">
+        <figcaption class="caption">
+          <strong>Jonathan Van de Wal</strong><br>
+          Schilder en assemblage-maker. Ruimtelijke interventies, beïnvloed door Broodthaers en alledaagse objecten.
+          <a class="mono-link" href="jonathan-van-de-wal.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Pol.jpg" alt="Werk van Pol Olivier">
+        <figcaption class="caption">
+          <strong>Pol Olivier</strong><br>
+          Intieme portretten en sculpturen rond familie, met focus op de ruimte tussen mensen.
+          <a class="mono-link" href="pol-olivier.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Niels.jpg" alt="Werk van Niels Poiz">
+        <figcaption class="caption">
+          <strong>Niels Poiz</strong><br>
+          Taal, performance en editie. Identiteit en popcultuur via appropriation en narratieve installaties.
+          <a class="mono-link" href="niels-poiz.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Nora.jpg" alt="Werk van Nora Mahammed">
+        <figcaption class="caption">
+          <strong>Nora Mahammed</strong><br>
+          Poëtische, zintuiglijke installaties op het snijvlak van scenografie en architectuur.
+          <a class="mono-link" href="nora-mahammed.html">Lees meer</a>
+        </figcaption>
+      </figure>
+
+      <figure class="module">
+        <img src="assets/img/artists/Jente.jpg" alt="Werk van Jente Waerzeggers">
+        <figcaption class="caption">
+          <strong>Jente Waerzeggers</strong><br>
+          Fotograaf/muzikant. Ruwe, directe snapshots van de Belgische muziek- en kunstscene.
+          <a class="mono-link" href="jente-waerzeggers.html">Lees meer</a>
+        </figcaption>
+      </figure>
+    </div>
+  </div>
+</section>
+
 
     <!-- ===============================
          OPEN CALL
