--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <figcaption class="caption">
           <strong>Shailey Shah</strong><br>
           Multidisciplinair: video, sculptuur, schilderkunst, installaties. Onderzoekt identiteit, gender en haar multiculturele achtergrond via materiaal en vorm.
-          <a class="mono-link" href="shailey-shah.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Shailey.html">Lees meer</a>
         </figcaption>
       </figure>
 
